--- a/plugin.xml
+++ b/plugin.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <plugin xmlns="http://cordova.apache.org/ns/plugins/1.0"
-           id="com.cranberrygame.cordova.plugin.analytics.flurry"
+           id="com.cranberrygame.cordova.plugin.analytics.flurryanalytics"
       version="1.0.1">
 	  
-    <name>Phonegap FlurryAnalytics plugin</name>
-    <description>Phonegap FlurryAnalytics plugin</description>
+    <name>Cordova FlurryAnalytics plugin</name>
+    <description>Cordova FlurryAnalytics plugin</description>
     <author>Sang Ki Kwon (Cranberrygame)</author>	
     <license>MIT</license>
-    <keywords>phonegap, plugin, flurry, analytics</keywords>
-    <repo>https://github.com/cranberrygame/com.cranberrygame.cordova.plugin.analytics.flurry</repo>
-    <issue>https://github.com/cranberrygame/com.cranberrygame.cordova.plugin.analytics.flurry/issues</issue>	
+    <keywords>cordova,plugin,analytics,flurryanalytics</keywords>
+    <repo>https://github.com/cranberrygame/com.cranberrygame.cordova.plugin.analytics.flurryanalytics</repo>
+    <issue>https://github.com/cranberrygame/com.cranberrygame.cordova.plugin.analytics.flurryanalytics/issues</issue>	
 	<engines>
 	    <engine name="cordova" version=">=3.0.0" />
 	</engines>
