--- a/plugin.xml
+++ b/plugin.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <plugin xmlns="http://cordova.apache.org/ns/plugins/1.0"
-           id="com.cranberrygame.cordova.plugin.analytics.flurryanalytics"
-      version="1.0.1">
+           id="cordova-plugin-analytics-flurryanalytics"
+      version="1.0.21">
 	  
     <name>Cordova FlurryAnalytics plugin</name>
     <description>Cordova FlurryAnalytics plugin</description>
     <author>Sang Ki Kwon (Cranberrygame)</author>	
     <license>MIT</license>
     <keywords>cordova,plugin,analytics,flurryanalytics</keywords>
-    <repo>https://github.com/cranberrygame/com.cranberrygame.cordova.plugin.analytics.flurryanalytics</repo>
-    <issue>https://github.com/cranberrygame/com.cranberrygame.cordova.plugin.analytics.flurryanalytics/issues</issue>	
+    <repo>https://github.com/cranberrygame/cordova-plugin-analytics-flurryanalytics</repo>
+    <issue>https://github.com/cranberrygame/cordova-plugin-analytics-flurryanalytics/issues</issue>	
 	<engines>
 	    <engine name="cordova" version=">=3.0.0" />
 	</engines>
